src/test/ui/parser/issue-14303-trait.stderr
error: incorrect parameter order
  --> $DIR/issue-14303-trait.rs:3:10
   |
LL | trait Foo<'a, T, 'b> {}
   |          ^^^^^^^^^^^ help: reorder the parameters: `<'a, 'b, T>`

error: aborting due to previous error

