src/test/ui/parser/issue-14303-trait.rs
// run-rustfix
#![allow(dead_code)]
trait Foo<'a, T, 'b> {} //~ ERROR incorrect parameter order

fn main() {}
